# mdemg-linux-sidebar

./: .gitignore  Makefile  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml  release.yml
src/: api.js  index.html  main.js  state.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api_client.rs  cli_executor.rs  commands.rs  instance_scanner.rs  instance_store.rs  main.rs  server_discovery.rs  types.rs
src/tabs/: config.js  jiminy.js  learning.js  logs.js  memory.js  neo4j.js  rsic.js  status.js  synergy.js  teardown-wizard.js
src/utils/: dom.js  formatting.js
