[package]
name = "mdemg-sidebar"
version = "0.1.0"
description = "MDEMG Linux Sidebar - System tray companion for Multi-Dimensional Emergent Memory Graph"
authors = ["reh3376"]
license = "MIT"
repository = "https://github.com/reh3376/mdemg-linux-sidebar"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
